enhancements and screenshots

--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,156 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto);
 body {
-  font-family: 'PT Sans Narrow', sans-serif;
-  background-color: #eee;
-  background-image: url("http://i.cubeupload.com/NjsJx8.png");
-  margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #eee;
+    background: #eee;
+    margin: 0;
 }
 
 h1 {
-  font-size: 4em;
-  font-family: 'PT Sans Narrow', sans-serif;
-  line-height: 1.1;
-  text-align: center;
-  padding: 10px;
+    font-size: 4em;
+    font-family: 'Roboto', sans-serif;
+    -ms-text-shadow: 1px 1px 0 #fff, 2px 2px;
+    text-shadow: 1px 1px 0 #fff, 2px 2px;
+    line-height: 1.1;
+    text-align: center;
+    padding: 10px;
 }
 
 p {
-  font-size: 1.2em;
-  text-align: center;
-  padding: 10px;
+    font-size: 1.2em;
+    text-align: center;
+    padding: 10px;
 }
 
 nav {
-  height: 40px;
-  width: 100%;
-  background-color: #333;
-  color: #eee;
+    height: 40px;
+    width: 100%;
+    background-color: rgb(51, 51, 51);
+    color: #eee;
 }
-nav ul {
-  padding: 0;
-  margin: 0;
+
+    nav ul {
+        padding: 0;
+        margin: 0;
+    }
+
+    nav li {
+        display: inline;
+        float: left;
+    }
+
+    nav a {
+        display: inline-block;
+        width: 100px;
+        text-align: center;
+        text-decoration: none;
+        padding: 10px 0;
+        color: #eee;
+    }
+
+    nav li:hover {
+        background-color: rgb(68, 68, 68);
+    }
+
+    nav a#open {
+        display: none;
+    }
+
+footer {
+    color: rgb(51, 51, 51);
+    text-align: center;
+    font-weight: 400;
 }
-nav li {
-  display: inline;
-  float: left;
+
+.dotted {
+    padding: 2.25em 1.6875em;
+    background-image: -webkit-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+    background-image: -moz-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+    background-image: -ms-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+    background-image: repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+    -webkit-background-size: 3px 3px;
+    -moz-background-size: 3px 3px;
+    -ms-background-size: 3px 3px;
+    background-size: 3px 3px;
 }
-nav a {
-  display: inline-block;
-  width: 100px;
-  text-align: center;
-  text-decoration: none;
-  padding: 10px 0;
-  color: #eee;
-  text-decoration: none;
-}
-nav li:hover {
-  background-color: #444;
-}
-nav a#open {
-  display: none;
+
+.stripped {
+    padding: 2.25em 1.6875em;
+    background-image: -webkit-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+    background-image: -moz-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+    background-image: -o-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+    background-image: repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+    -webkit-background-size: 4px 4px;
+    -moz-background-size: 4px 4px;
+    -ms-background-size: 4px 4px;
+    background-size: 4px 4px;
 }
 
 @media screen and (max-width: 480px) {
-  h1 {
-    font-size: 2.8em;
-  }
+    h1 {
+        font-size: 2.8em;
+    }
 
-  nav {
-    height: auto;
-    border-bottom: 0;
-  }
-  nav ul {
-    display: none;
-    height: auto;
-  }
-  nav li {
-    width: 100%;
-    float: left;
-    position: relative;
-  }
-  nav a {
-    text-align: left;
-    width: 100%;
-    text-indent: 25px;
-    background: #333;
-    border-bottom: 1px solid #555;
-  }
-  nav a:hover {
-    background: #444;
-  }
-  nav a#open:after {
-    content: "|||";
-    transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    /* IE 9 */
-    -webkit-transform: rotate(-90deg);
-    /* Safari and Chrome */
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    position: absolute;
-    right: 5px;
-    top: 20px;
-  }
-  nav a#open {
-    display: block;
-    background-color: #333;
-    width: 100%;
-    position: relative;
-  }
-}
-.cf:before, .cf:after {
-  content: "";
-  display: table;
-}
+    nav {
+        height: auto;
+        border-bottom: 0;
+    }
 
-.cf:after {
-  clear: both;
+        nav ul {
+            display: none;
+            height: auto;
+        }
+
+        nav li {
+            width: 100%;
+            float: left;
+            position: relative;
+        }
+
+        nav a {
+            text-align: left;
+            width: 100%;
+            text-indent: 25px;
+            background: rgb(51, 51, 51);
+            border-bottom: 1px solid rgb(85, 85, 85);
+        }
+
+            nav a:hover {
+                background: rgb(68, 68, 68);
+            }
+
+            nav a#open:after {
+                content: "|||";
+                transform: rotate(-90deg);
+                -ms-transform: rotate(-90deg);
+                /* IE 9 */
+                -webkit-transform: rotate(-90deg);
+                /* Safari and Chrome */
+                width: 30px;
+                height: 30px;
+                display: inline-block;
+                position: absolute;
+                right: 5px;
+                top: 20px;
+            }
+
+            nav a#open {
+                display: block;
+                background-color: rgb(51, 51, 51);
+                width: 100%;
+                position: relative;
+            }
 }
 
-.cf {
-  zoom: 1;
+.menu:before, .menu:after {
+    content: "";
+    display: table;
 }
 
-/* For IE 6/7 (trigger hasLayout) */
+.menu:after {
+    clear: both;
+}
+
+.menu {
+    zoom: 1;
+}
